--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<img src="assets/img/profile2.jpg" width="200px" height="200px" style="border-radius: 200px; margin-bottom: 20px; border: 5px solid #efefef">
 				<h1 class="logo">Kağan İnan</h1>
 				<p class="about">
-					I was born in March, 1999 in Trabzon, Turkey. I'm currently freshman student in Bahçeşehir University. I'm working to make the world a better place. My interests are robotics, machine learning, photography, cinematography and cycling. Also I have many awards and certifications in robotics.
+					I was born in March, 1999 in Trabzon, Turkey. I'm currently student in Bahçeşehir University. I'm working to make the world a better place. My interests are robotics, machine learning, photography, cinematography and cycling. Also I have many awards and certifications in robotics.
 					<br><br>
 					My latest project is <b><a class="link-effect link-before scroll" href="index.html#robomental">RoboMental</a></b>, at <b><a class="link-effect link-before" target="_blank" href="http://akcaabatfenlisesi.meb.k12.tr/">AFL</a></b>, and a security robot <b><a class="link-effect link-before scroll" href="index.html#robocar">RoboCar</a></b>. Another project is, solar powered electric car project called <b><a href="index.html#formulaz" class="link-effect link-before scroll">FormuLaz</a></b>. Recently I have made a <b><a href="index.html#vslider" class="link-effect link-before scroll">VSlider</a></b> for cinematography. You can see my photos in <b><a href="https://500px.com/kaaninan99" class="link-effect link-before">500px</a></b>. At the same time I have made freelance works.
 				</p>
@@ -70,8 +70,8 @@
 					</p>
 				</div>
 				<div class="contact">
-					<a class="link-effect link-before" href="http://blog.kaaninan.net" target="_blank">blog</a>
-					<span>//</span>
+					<!-- <a class="link-effect link-before" href="http://blog.kaaninan.net" target="_blank">blog</a> -->
+					<!-- <span>//</span> -->
 					<a class="link-effect link-before" href="kaaninan_resume.pdf" target="_blank">resume</a>
 					<span>//</span>
 					<a class="link-effect link-before" href="mailto:contact@kaaninan.net">contact@kaaninan.net</a>
@@ -117,12 +117,12 @@
 							<span class="link-effect link-before">Instagram</span>
 						</a>
 					</p>
-					<p class="link">
+					<!-- <p class="link">
 						<a href="https://www.facebook.com/kaaninann" target="_blank">
 							<i class="fa fa-facebook" style="color: black"></i>
 							<span class="link-effect link-before">Facebook</span>
 						</a>
-					</p>
+					</p> -->
 					<p class="link">
 						<a href="https://github.com/kaaninan" target="_blank">
 							<i class="fa fa-github" style="color: black"></i>
@@ -183,7 +183,7 @@
 					<div class="item-main" style="margin-bottom: 0; margin-top: 0" >
 						<ul class="works">
 
-							<li>
+							<!-- <li>
 								<div style="float:left">
 									<div class="works-img"><img src="assets/img/works/tundera.jpg" alt="tundera" width="50px"></div>
 								</div>
@@ -193,7 +193,7 @@
 									<p class="works-sub"><i class="fa fa-calendar" style="color: #9A9A9A; font-size: 14px"></i>&nbsp;&nbsp;Nov 2017 - Now</p>
 									<p class="works-sub"><i class="fa fa-map-marker" style="color: #9A9A9A; padding: 0 2px;"></i>&nbsp;&nbsp;Zurich, Switzerland</p>
 								</div>
-							</li>
+							</li> -->
 
 							<li>
 								<div style="float:left">
@@ -209,24 +209,12 @@
 
 							<li>
 								<div style="float:left">
-									<div class="works-img"><img src="assets/img/works/ideafield.png" alt="ideafield" width="50px"></div>
+									<div class="works-img"><img src="assets/img/works/bulutyazilim.jpg" alt="bulutyazilim" width="50px"></div>
 								</div>
 								<div class="works-block">
 									<p class="works-title">Research Engineer</p>
-									<p class="works-company"><a href="https://www.linkedin.com/company/idea-field-bv" target="_blank" class="fancybox-thumb link-effect link-before" rel="fancybox-thumb">IdeaField BV</a></p>
+									<p class="works-company"><a href="https://www.linkedin.com/company/idea-field-bv" target="_blank" class="fancybox-thumb link-effect link-before" rel="fancybox-thumb">Bulut Yazılım A.Ş.</a></p>
 									<p class="works-sub"><i class="fa fa-calendar" style="color: #9A9A9A; font-size: 14px"></i>&nbsp;&nbsp;Mar 2018 - Now</p>
-									<p class="works-sub"><i class="fa fa-map-marker" style="color: #9A9A9A; padding: 0 2px;"></i>&nbsp;&nbsp;Amsterdam, Netherlands</p>
-								</div>
-							</li>
-
-							<li>
-								<div style="float:left">
-									<div class="works-img"><img src="assets/img/works/stemmaker.jpg" alt="stem_maker" width="50px"></div>
-								</div>
-								<div class="works-block">
-									<p class="works-title">Contributing Writing</p>
-									<p class="works-company"><a href="https://twitter.com/stem_maker" target="_blank" class="fancybox-thumb link-effect link-before" rel="fancybox-thumb">Stem&Maker Magazine</a></p>
-									<p class="works-sub"><i class="fa fa-calendar" style="color: #9A9A9A; font-size: 14px"></i>&nbsp;&nbsp;Oct 2017 - Now</p>
 									<p class="works-sub"><i class="fa fa-map-marker" style="color: #9A9A9A; padding: 0 2px;"></i>&nbsp;&nbsp;Istanbul, Turkey</p>
 								</div>
 							</li>
@@ -242,6 +230,18 @@
 									<p class="works-sub"><i class="fa fa-map-marker" style="color: #9A9A9A; padding: 0 2px;"></i>&nbsp;&nbsp;Istanbul, Turkey</p>
 								</div>
 							</li>
+							
+							<li>
+								<div style="float:left">
+									<div class="works-img"><img src="assets/img/works/stemmaker.jpg" alt="stem_maker" width="50px"></div>
+								</div>
+								<div class="works-block">
+									<p class="works-title">Contributing Writing</p>
+									<p class="works-company"><a href="https://twitter.com/stem_maker" target="_blank" class="fancybox-thumb link-effect link-before" rel="fancybox-thumb">Stem&Maker Magazine</a></p>
+									<p class="works-sub"><i class="fa fa-calendar" style="color: #9A9A9A; font-size: 14px"></i>&nbsp;&nbsp;Oct 2017 - July 2018</p>
+									<p class="works-sub"><i class="fa fa-map-marker" style="color: #9A9A9A; padding: 0 2px;"></i>&nbsp;&nbsp;Istanbul, Turkey</p>
+								</div>
+							</li>
 
 							<li>
 								<div style="float:left">
@@ -251,7 +251,7 @@
 									<p class="works-title">Blogger at Integrated Teaching Project Portal</p>
 									<p class="works-company"><a href="http://inteach.org/blog-yazilari-yazar-318/" target="_blank" class="fancybox-thumb link-effect link-before" rel="fancybox-thumb">Bahçeşehir University - BAUSTEM</a></p>
 									<p class="works-about">Writing articles about TI-84 & TI-Innovator Hub technology</p>
-									<p class="works-sub"><i class="fa fa-calendar" style="color: #9A9A9A; font-size: 14px"></i>&nbsp;&nbsp;Sep 2017 - Now</p>
+									<p class="works-sub"><i class="fa fa-calendar" style="color: #9A9A9A; font-size: 14px"></i>&nbsp;&nbsp;Sep 2017 - June 2018</p>
 									<p class="works-sub"><i class="fa fa-map-marker" style="color: #9A9A9A; padding: 0 2px;"></i>&nbsp;&nbsp;Istanbul, Turkey</p>
 								</div>
 							</li>
